--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,34 +1,176 @@
-name: Build
+name: Build and Release Raylib with MinGW and Libraries
 
-on: [push, pull_request]
+on:
+  workflow_dispatch:
+  push:
+    tags: [ "v*" ]
 
 jobs:
   build:
-    name: Build
     strategy:
       matrix:
-        arch: [32, 64]
+        arch: [i686, x86_64]
+      fail-fast: false
     runs-on: windows-latest
-    defaults:
-      run:
-        shell: bash
-
     steps:
-      - uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-      - name: Build
-        run: |
-          ./main.sh --arch ${{ matrix.arch }}
+    - name: Download MinGW-w64
+      run: |
+        $arch = "${{ matrix.arch }}"
+        if ($arch -eq "i686") {
+          $mingwUrl = "https://github.com/niXman/mingw-builds-binaries/releases/download/15.1.0-rt_v12-rev0/i686-15.1.0-release-posix-dwarf-msvcrt-rt_v12-rev0.7z"
+          $mingwDir = "mingw32"
+        } else {
+          $mingwUrl = "https://github.com/niXman/mingw-builds-binaries/releases/download/15.1.0-rt_v12-rev0/x86_64-15.1.0-release-posix-seh-msvcrt-rt_v12-rev0.7z"
+          $mingwDir = "mingw64"
+        }
+        Invoke-WebRequest -Uri $mingwUrl -OutFile "mingw.7z"
+        echo "MINGW_DIR=$mingwDir" >> $env:GITHUB_ENV
 
-      - name: Upload
-        uses: actions/upload-artifact@v4
-        with:
-          name: MinGW${{ matrix.arch }}
-          path: dist/*.7z
+    - name: Install 7-Zip
+      uses: burnett01/install-7zip-action@v1
 
-      - name: Release
-        uses: softprops/action-gh-release@v2
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          files: |
-            dist/*.7z
+    - name: Extract MinGW
+      run: 7z x mingw.7z -o"$env:MINGW_DIR"
+
+    - name: Add MinGW to PATH
+      run: |
+        $mingwPath = "$pwd\$env:MINGW_DIR\bin"
+        echo "$mingwPath" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+
+    - name: Verify GCC version
+      run: gcc --version
+
+    - name: Clone Raylib source
+      run: |
+        git clone --depth 1 --branch 5.0 https://github.com/raysan5/raylib.git
+
+    - name: Build Raylib
+      run: |
+        cd raylib/src
+        # 编译静态库和动态库
+        make PLATFORM=PLATFORM_DESKTOP CC=gcc RAYLIB_LIBTYPE=STATIC -j4
+        make PLATFORM=PLATFORM_DESKTOP CC=gcc RAYLIB_LIBTYPE=SHARED -j4
+
+    - name: Build SQLite
+      run: |
+        # 下载SQLite源码
+        $sqliteUrl = "https://sqlite.org/2025/sqlite-amalgamation-3500200.zip"
+        Invoke-WebRequest -Uri $sqliteUrl -OutFile "sqlite.zip"
+        7z x sqlite.zip -o"sqlite-src"
+        
+        # 编译静态库
+        cd sqlite-src
+        gcc -c -O2 -DSQLITE_ENABLE_JSON1 -DSQLITE_ENABLE_FTS5 -DSQLITE_ENABLE_RTREE sqlite3.c -o sqlite3.o
+        ar rcs libsqlite3.a sqlite3.o
+        
+        # 编译动态库
+        gcc -shared -O2 -DSQLITE_ENABLE_JSON1 -DSQLITE_ENABLE_FTS5 -DSQLITE_ENABLE_RTREE sqlite3.c -o sqlite3.dll -Wl,--out-implib,libsqlite3.dll.a
+
+    - name: Build cJSON
+      run: |
+        # 下载cJSON源码
+        git clone --depth 1 https://github.com/DaveGamble/cJSON.git
+        
+        # 编译静态库
+        cd cJSON
+        mkdir build
+        cd build
+        cmake -DCMAKE_BUILD_TYPE=Release -DENABLE_CJSON_UTILS=On -DENABLE_CJSON_TEST=Off -DBUILD_SHARED_LIBS=Off ..
+        cmake --build . --config Release
+        
+        # 编译动态库
+        cd ..
+        mkdir build_shared
+        cd build_shared
+        cmake -DCMAKE_BUILD_TYPE=Release -DENABLE_CJSON_UTILS=On -DENABLE_CJSON_TEST=Off -DBUILD_SHARED_LIBS=On ..
+        cmake --build . --config Release
+
+    - name: Create package
+      run: |
+        $arch = "${{ matrix.arch }}"
+        mkdir "raylib_$arch"
+        mkdir "raylib_$arch/include"
+        mkdir "raylib_$arch/lib"
+        mkdir "raylib_$arch/bin"
+        
+        # 复制Raylib文件
+        copy raylib/src/raylib.h "raylib_$arch/include"
+        copy raylib/src/raymath.h "raylib_$arch/include"
+        copy raylib/src/rlgl.h "raylib_$arch/include"
+        copy raylib/src/libraylib.a "raylib_$arch/lib"
+        copy raylib/src/raylib.dll "raylib_$arch/bin"
+        copy raylib/src/raylib.dll.def "raylib_$arch/lib"
+        copy raylib/src/raylib.lib "raylib_$arch/lib"
+        
+        # 复制SQLite文件
+        copy sqlite-src/sqlite3.h "raylib_$arch/include"
+        copy sqlite-src/sqlite3ext.h "raylib_$arch/include"
+        copy sqlite-src/libsqlite3.a "raylib_$arch/lib"
+        copy sqlite-src/sqlite3.dll "raylib_$arch/bin"
+        copy sqlite-src/libsqlite3.dll.a "raylib_$arch/lib"
+        
+        # 复制cJSON文件
+        copy cJSON/cJSON.h "raylib_$arch/include"
+        copy cJSON/build/libcjson.a "raylib_$arch/lib"
+        copy cJSON/build_shared/libcjson.dll "raylib_$arch/bin"
+        copy cJSON/build_shared/libcjson.dll.a "raylib_$arch/lib"
+        
+        # 创建版本文件
+        echo "Raylib 5.0 built with MinGW-w64 GCC 15.1.0 ($arch)" > "raylib_$arch/version.txt"
+        echo "SQLite version: 3.46.0" >> "raylib_$arch/version.txt"
+        echo "cJSON version: 1.7.17" >> "raylib_$arch/version.txt"
+        echo "Build date: $(Get-Date -Format 'yyyy-MM-dd HH:mm:ss')" >> "raylib_$arch/version.txt"
+
+    - name: Zip package
+      uses: montudor/action-zip@v1
+      with:
+        args: zip -qq -r "raylib_full_${{ matrix.arch }}.zip" "raylib_${{ matrix.arch }}"
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: raylib-full-${{ matrix.arch }}
+        path: raylib_full_${{ matrix.arch }}.zip
+
+  release:
+    needs: build
+    runs-on: windows-latest
+    steps:
+    - name: Download artifacts
+      uses: actions/download-artifact@v3
+      with:
+        path: artifacts
+
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: "Raylib MinGW-w64 Full Bundle"
+        draft: false
+        prerelease: false
+
+    - name: Upload Release Assets
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./artifacts/raylib-full-i686/raylib_full_i686.zip
+        asset_name: raylib_full_i686.zip
+        asset_content_type: application/zip
+
+    - name: Upload Release Assets
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./artifacts/raylib-full-x86_64/raylib_full_x86_64.zip
+        asset_name: raylib_full_x86_64.zip
+        asset_content_type: application/zip
