--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build and Release Raylib with MinGW and Libraries
+name: Build and Release Raylib with MinGW
 
 on:
   workflow_dispatch:
@@ -29,8 +29,8 @@ jobs:
         Invoke-WebRequest -Uri $mingwUrl -OutFile "mingw.7z"
         echo "MINGW_DIR=$mingwDir" >> $env:GITHUB_ENV
 
-    - name: Install 7-Zip with Chocolatey
-      run: choco install 7zip -y
+    - name: Install 7-Zip
+      uses: burnett01/install-7zip-action@v1
 
     - name: Extract MinGW
       run: 7z x mingw.7z -o"$env:MINGW_DIR"
@@ -50,45 +50,10 @@ jobs:
     - name: Build Raylib
       run: |
         cd raylib/src
+        # 编译静态库
         make PLATFORM=PLATFORM_DESKTOP CC=gcc RAYLIB_LIBTYPE=STATIC -j4
+        # 编译动态库
         make PLATFORM=PLATFORM_DESKTOP CC=gcc RAYLIB_LIBTYPE=SHARED -j4
-
-    - name: Build SQLite
-      run: |
-        $sqliteUrl = "https://sqlite.org/2024/sqlite-amalgamation-3460000.zip"
-        Invoke-WebRequest -Uri $sqliteUrl -OutFile "sqlite.zip"
-        7z x sqlite.zip -o"sqlite-src"
-        
-        # 进入解压后的实际目录
-        cd sqlite-src
-        $sqliteDir = Get-ChildItem -Directory | Select-Object -First 1
-        if ($sqliteDir) {
-            cd $sqliteDir.Name
-        }
-        
-        # 修复：使用直接命令调用避免模块加载问题
-        gcc -c -O2 -DSQLITE_ENABLE_JSON1 -DSQLITE_ENABLE_FTS5 -DSQLITE_ENABLE_RTREE .\sqlite3.c -o sqlite3.o
-        
-        # 修复：使用完整的可执行路径调用ar
-        & "$pwd\$env:MINGW_DIR\bin\ar.exe" rcs libsqlite3.a sqlite3.o
-        
-        gcc -shared -O2 -DSQLITE_ENABLE_JSON1 -DSQLITE_ENABLE_FTS5 -DSQLITE_ENABLE_RTREE .\sqlite3.c -o sqlite3.dll '-Wl,--out-implib,libsqlite3.dll.a'
-
-    - name: Build cJSON
-      run: |
-        git clone --depth 1 --branch v1.7.17 https://github.com/DaveGamble/cJSON.git
-        
-        cd cJSON
-        mkdir build
-        cd build
-        cmake -G "MinGW Makefiles" -DCMAKE_BUILD_TYPE=Release -DENABLE_CJSON_UTILS=On -DENABLE_CJSON_TEST=Off -DBUILD_SHARED_LIBS=Off ..
-        cmake --build . --config Release
-        
-        cd ..
-        mkdir build_shared
-        cd build_shared
-        cmake -G "MinGW Makefiles" -DCMAKE_BUILD_TYPE=Release -DENABLE_CJSON_UTILS=On -DENABLE_CJSON_TEST=Off -DBUILD_SHARED_LIBS=On ..
-        cmake --build . --config Release
 
     - name: Create package
       run: |
@@ -98,63 +63,70 @@ jobs:
         mkdir "raylib_$arch/lib"
         mkdir "raylib_$arch/bin"
         
-        # Raylib
+        # 复制头文件
         copy raylib/src/raylib.h "raylib_$arch/include"
         copy raylib/src/raymath.h "raylib_$arch/include"
         copy raylib/src/rlgl.h "raylib_$arch/include"
+        
+        # 复制静态库
         copy raylib/src/libraylib.a "raylib_$arch/lib"
+        
+        # 复制动态库和相关文件
         copy raylib/src/raylib.dll "raylib_$arch/bin"
         copy raylib/src/raylib.dll.def "raylib_$arch/lib"
         copy raylib/src/raylib.lib "raylib_$arch/lib"
         
-        # SQLite - 修复路径处理
-        $sqliteIncludePath = "sqlite-src"
-        if (Test-Path "sqlite-src\sqlite-amalgamation-*") {
-            $sqliteIncludePath = (Get-ChildItem "sqlite-src\sqlite-amalgamation-*" -Directory | Select-Object -First 1).FullName
-        } elseif (Test-Path "sqlite-src\*") {
-            $sqliteIncludePath = (Get-ChildItem "sqlite-src\*" -Directory | Select-Object -First 1).FullName
-        }
-        copy "$sqliteIncludePath\sqlite3.h" "raylib_$arch/include"
-        copy "$sqliteIncludePath\sqlite3ext.h" "raylib_$arch/include"
-        copy "$sqliteIncludePath\libsqlite3.a" "raylib_$arch/lib"
-        copy "$sqliteIncludePath\sqlite3.dll" "raylib_$arch/bin"
-        copy "$sqliteIncludePath\libsqlite3.dll.a" "raylib_$arch/lib"
-        
-        # cJSON
-        copy cJSON/cJSON.h "raylib_$arch/include"
-        copy cJSON/build/libcjson.a "raylib_$arch/lib"
-        copy cJSON/build_shared/libcjson.dll "raylib_$arch/bin"
-        copy cJSON/build_shared/libcjson.dll.a "raylib_$arch/lib"
-        
-        # Version info
+        # 创建版本文件
         echo "Raylib 5.0 built with MinGW-w64 GCC 15.1.0 ($arch)" > "raylib_$arch/version.txt"
-        echo "SQLite version: 3.46.0" >> "raylib_$arch/version.txt"
-        echo "cJSON version: 1.7.17" >> "raylib_$arch/version.txt"
         echo "Build date: $(Get-Date -Format 'yyyy-MM-dd HH:mm:ss')" >> "raylib_$arch/version.txt"
 
     - name: Zip package
-      run: 7z a -tzip "raylib_full_${{ matrix.arch }}.zip" "raylib_${{ matrix.arch }}"
+      uses: montudor/action-zip@v1
+      with:
+        args: zip -qq -r "raylib_mingw_${{ matrix.arch }}.zip" "raylib_${{ matrix.arch }}"
 
     - name: Upload artifact
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@v3
       with:
-        name: raylib-full-${{ matrix.arch }}
-        path: raylib_full_${{ matrix.arch }}.zip
+        name: raylib-mingw-${{ matrix.arch }}
+        path: raylib_mingw_${{ matrix.arch }}.zip
 
   release:
     needs: build
     runs-on: windows-latest
     steps:
     - name: Download artifacts
-      uses: actions/download-artifact@v4
+      uses: actions/download-artifact@v3
       with:
         path: artifacts
 
     - name: Create Release
-      uses: softprops/action-gh-release@v1
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: ${{ github.ref }}
-        name: "Raylib MinGW-w64 Full Bundle"
-        files: |
-          artifacts/raylib-full-i686/raylib_full_i686.zip
-          artifacts/raylib-full-x86_64/raylib_full_x86_64.zip
+        release_name: "Raylib MinGW-w64 Build"
+        draft: false
+        prerelease: false
+
+    - name: Upload Release Assets
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./artifacts/raylib-mingw-i686/raylib_mingw_i686.zip
+        asset_name: raylib_mingw_i686.zip
+        asset_content_type: application/zip
+
+    - name: Upload Release Assets
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./artifacts/raylib-mingw-x86_64/raylib_mingw_x86_64.zip
+        asset_name: raylib_mingw_x86_64.zip
+        asset_content_type: application/zip
