--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
         echo "MINGW_DIR=$mingwDir" >> $env:GITHUB_ENV
 
     - name: Install 7-Zip
-      uses: burnett01/install-7zip-action@v1
+      run: choco install 7zip -y
 
     - name: Extract MinGW
       run: 7z x mingw.7z -o"$env:MINGW_DIR"
